--- a/css/styles.css
+++ b/css/styles.css
@@ -9,14 +9,15 @@
 }
 
 * {
-  margin: 0px;
+  margin: 0px auto;
   padding: 0px;
 }
 
 body {
-  width: 1600px;
   color: var(--title-text);
   font-family: "Roboto", sans-serif;
+  margin: 0 auto;
+  width: 1600px;
 }
 
 /* header */
@@ -25,16 +26,16 @@ body {
   border-bottom: solid;
   border-color: #ececec;
   border-width: 1px;
-  display: inline-flex;
+  display: flex;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 .top a {
   text-decoration: none;
 }
 
 .logo {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  padding-left: 215px;
+  margin-right: 93px;
 }
 
 .logo-anterior {
@@ -62,18 +63,12 @@ body {
 
 .navigation {
   list-style-type: none;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  display: flex;
+  padding-top: 8px;
+  padding-bottom: 7px;
+  margin-right: 317px;
 }
 
-.navigation li {
-  width: 53px;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  margin-left: 23px;
-  margin-right: 23px;
-  display: inline;
-}
 .navigation a {
   color: var(--title-text);
   text-decoration: none;
@@ -81,7 +76,6 @@ body {
   font-size: 14px;
   line-height: 1.172;
   letter-spacing: 0.02em;
-  list-style-type: none;
 }
 
 .navigation a:hover {
@@ -92,9 +86,14 @@ body {
   color: var(--higlight-text);
 }
 
-.contact-left {
-  padding-top: 32px;
-  padding-bottom: 32px;
+.portfolio-link {
+  margin-left: 46px;
+  margin-right: 46px;
+}
+
+.contact {
+  padding-top: 8px;
+  padding-bottom: 7px;
   align-items: flex-end;
 }
 .contact a {
@@ -104,21 +103,10 @@ body {
   font-size: 14px;
   line-height: 1.172;
   letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .mail {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  margin-left: 371px;
   margin-right: 50px;
-}
-
-.tel {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  margin-right: 230px;
 }
 
 .contact a:hover {
@@ -135,25 +123,23 @@ body {
 .header {
   background-color: #2f303a;
   color: #ffffff;
-  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .slogan {
   text-decoration: none;
   text-transform: uppercase;
+  text-align: center;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
-  padding-top: 200px;
-  padding-left: 452px;
-  padding-right: 452px;
-  padding-bottom: 30px;
+  margin-bottom: 40px;
+  margin-left: 252px;
+  margin-right: 252px;
 }
 
-.click-to-order-button {
-  padding-bottom: 200px;
-}
 .click-to-order {
   background-color: var(--higlight-text);
   color: #ffffff;
@@ -169,6 +155,7 @@ body {
   padding-right: 41px;
   padding-bottom: 10px;
   padding-left: 42px;
+  margin-left: 500px;
 }
 
 /* title section end */
@@ -182,7 +169,6 @@ body {
 
 .adventages li {
   list-style-type: none;
-  width: 270px;
 }
 
 .adventages h3 {
@@ -193,6 +179,7 @@ body {
   line-height: 1.172;
   letter-spacing: 0.03em;
   list-style-type: none;
+  margin-bottom: 10px;
 }
 
 .adventages p {
@@ -202,7 +189,6 @@ body {
   line-height: 1.714;
   letter-spacing: 0.03em;
   list-style-type: none;
-  padding-top: 10px;
 }
 
 /* adventages end */
@@ -215,7 +201,8 @@ body {
   font-size: 36px;
   line-height: 1.172;
   letter-spacing: 0.03em;
-  padding-left: 410px;
+  margin-left: 424px;
+  margin-bottom: 50px;
 }
 
 .what-do-we-do-list {
@@ -243,8 +230,8 @@ body {
   font-size: 36px;
   line-height: 1.172;
   letter-spacing: 0.03em;
-  padding-left: 409px;
-  padding-bottom: 50px;
+  margin-left: 495px;
+  margin-bottom: 50px;
 }
 
 .our-team-list {
@@ -252,6 +239,7 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
 .our-team-list li {
   width: 270px;
   border-right: solid #ececec 1px;
@@ -261,44 +249,47 @@ body {
 
 .our-team-list figure {
   background-color: var(--background-color);
+  padding-bottom: 30px;
 }
 
 .our-team-list h3 {
   color: var(--title-text);
   text-decoration: none;
+  text-align: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.171;
   letter-spacing: 0.03em;
-  padding-top: 30px;
-  padding-bottom: 10px;
-  padding-left: 90px;
-  padding-right: 90px;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
-.our-team-list-span {
+.our-team-list span {
   color: var(--description-text);
   text-decoration: none;
+  text-align: center;
   font-size: 16px;
   line-height: 1.171;
   letter-spacing: 0.03em;
-  padding-bottom: 30px;
 }
 
 /* our team end */
 
 /* portfolio */
-.portfolio-button-list {
-  list-style-type: none;
-  padding-left: 510px;
-  padding-top: 94px;
-  padding-bottom: 50px;
-  display: flex;
+
+.portfolio-button-projects {
+  padding-left: 15px;
 }
 
-.portfolio-button-list li {
-  margin-right: 8px;
+.portfolio-button-list {
+  list-style-type: none;
+  display: flex;
+  gap: 8px;
+  margin-left: 295px;
+  margin-right: 303px;
+  margin-bottom: 50px;
 }
+
 .portfolio-button-list button {
   background-color: #eeeeee;
   text-decoration: none;
@@ -307,12 +298,11 @@ body {
   line-height: 1.625;
   letter-spacing: 0.03em;
   cursor: pointer;
-  border: none;
+  border: #eeeeee;
+  border-radius: 4px;
   width: 121px;
   padding-top: 6px;
-  padding-right: 22px;
   padding-bottom: 6px;
-  padding-left: 22px;
 }
 
 .portfolio-button-list button:hover {
@@ -344,6 +334,12 @@ body {
   cursor: pointer;
 }
 
+.projects-list figcaption {
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 20px;
+}
+
 .projects-list h3 {
   color: var(--title-text);
   text-decoration: none;
@@ -351,8 +347,7 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  padding-top: 20px;
-  padding-left: 24px;
+  margin-top: 20px;
 }
 
 .projects-list span {
@@ -361,20 +356,22 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-  padding-top: 4px;
-  text-align: center;
+  margin-top: 4px;
 }
-
+/* projects end */
 /* footer */
 
 .footnote {
   background-color: #2f303a;
+  padding-top: 60px;
+  padding-left: 15px;
+  padding-bottom: 60px;
 }
 
 .logo-bottom {
-  padding-top: 60px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
+
 .logo-posterior-prim {
   color: var(--logo-posteriorprim);
   text-decoration: none;
@@ -388,17 +385,18 @@ body {
 }
 
 .address-bottom {
-  display: flex;
-  flex-direction: column;
-  padding-top: 20px;
-  padding-bottom: 60px;
+  display: block;
+}
+
+.address-bottom ul {
+  list-style: none;
 }
 
 .mail-bottom {
-  padding-top: 9px;
-  padding-bottom: 9px;
+  margin-top: 9px;
+  margin-bottom: 9px;
 }
-.address-bottom span {
+.headquarters {
   color: #ffffff;
   text-decoration: none;
   font-style: normal;
@@ -431,27 +429,6 @@ body {
   padding-bottom: 94px;
 }
 
-.container-projects {
+.container {
   width: 1200px;
-  margin-left: 215px;
-}
-
-.container-footnote {
-  widht: 1200px;
-  margin-left: 215px;
-}
-
-.container-advantages {
-  width: 1200px;
-  margin-left: 215px;
-}
-
-.container-what-do-we-do {
-  width: 1200px;
-  margin-left: 215px;
-}
-
-.container-our-team-list {
-  width: 1200px;
-  margin-left: 215px;
 }
